--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,7 +1,8 @@
 .home-container {
   height: 300px;
   color: white;
-  margin-left: 100px;
+  margin-left: 159px;
+  width: 90%;
 }
 
 .home-content h2 {
